--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
                 ] [<a href="https://observablehq.com/@epiverse/alphaGenome" target="_blank">Notebook</a>
                 ] [<a href="https://github.com/epiverse/alphaGenome/issues" target="_blank">Issues</a>
                 ] [<a href="https://github.com/epiverse/alphaGenome/wiki" target="_blank">Docs</a>
-                ]
+                ] [<a href="https://sites.google.com/mathbiol.org/cloud4bio/2025/2025-07-02-jul" target="_blank">C4B</a>
+                ] 
             </sup>
         </h1>
         <hr>
-        <p>Exploring interoperability with Google Deepmind's Alpha Genome resource, ideally supported as ES6 javasccript modules </p>
+        <p>Exploring interoperability with Google Deepmind's Alpha Genome resource, ideally supported as ES6 javasccript modules.</p>
         <hr>
+        
     </body>
 </html>
 </body><script src="./index.js" defer></script>
